--- a/package.json
+++ b/package.json
@@ -1,41 +1,26 @@
 {
-  "name": "react-burger",
-  "homepage": "./",
+  "name": "react-todo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.45",
-    "@types/react-router": "^5.1.18",
-    "prop-types": "^15.8.1",
+    "@types/node": "^16.11.46",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1",
-    "serve": "^13.0.2",
+    "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
-    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "cypress:open": "cypress open cache clear",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "deploy-script": "npm run build && scp -r ./build/* login@publicIp:/route"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -54,18 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@types/redux-logger": "^3.0.9",
-    "@types/uuid": "^8.3.4",
-    "cypress": "^10.3.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "fetch-mock": "^9.11.0",
-    "gh-pages": "^4.0.0",
-    "jest": "^28.1.2",
-    "redux-mock-store": "^1.5.4",
-    "terser-brunch": "^4.1.0"
   }
 }
